; ModuleID = '/home/carl/AnghaBench/radare2/libr/magic/extr_ascmagic.c_looks_utf8_with_BOM.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/magic/extr_ascmagic.c_looks_utf8_with_BOM.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i32*, i64*)* @looks_utf8_with_BOM to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @looks_utf8_with_BOM(i32* %0, i64 %1, i32* %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64*, align 8
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32* %2, i32** %8, align 8
  store i64* %3, i64** %9, align 8
  %10 = load i64, i64* %7, align 8
  %11 = icmp ugt i64 %10, 3
  br i1 %11, label %12, label %35

12:                                               ; preds = %4
  %13 = load i32*, i32** %6, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp eq i32 %15, 239
  br i1 %16, label %17, label %35

17:                                               ; preds = %12
  %18 = load i32*, i32** %6, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 1
  %20 = load i32, i32* %19, align 4
  %21 = icmp eq i32 %20, 187
  br i1 %21, label %22, label %35

22:                                               ; preds = %17
  %23 = load i32*, i32** %6, align 8
  %24 = getelementptr inbounds i32, i32* %23, i64 2
  %25 = load i32, i32* %24, align 4
  %26 = icmp eq i32 %25, 191
  br i1 %26, label %27, label %35

27:                                               ; preds = %22
  %28 = load i32*, i32** %6, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 3
  %30 = load i64, i64* %7, align 8
  %31 = sub i64 %30, 3
  %32 = load i32*, i32** %8, align 8
  %33 = load i64*, i64** %9, align 8
  %34 = call i32 @file_looks_utf8(i32* %29, i64 %31, i32* %32, i64* %33)
  store i32 %34, i32* %5, align 4
  br label %36

35:                                               ; preds = %22, %17, %12, %4
  store i32 -1, i32* %5, align 4
  br label %36

36:                                               ; preds = %35, %27
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}

declare dso_local i32 @file_looks_utf8(i32*, i64, i32*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
